project/manifests/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          image: FRONTEND_IMAGE
          imagePullPolicy: Always
          volumeMounts:
            - name: todo-storage
              mountPath: /logs
            - name: todo-storage
              mountPath: /static
          resources:
            requests:
              memory: "32Mi"
              cpu: "20m"
            limits:
              memory: "64Mi"
              cpu: "50m"
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 20
      volumes:
        - name: todo-storage
          persistentVolumeClaim:
            claimName: todo-app-pvc
