project/manifests/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - port: 666
      protocol: TCP
      targetPort: 8000
