project/manifests/base/backend-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: todo-backend-route
spec:
  parentRefs:
  - name: todo-app-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /todos
    backendRefs:
    - name: todo-backend-svc
      port: 3000
