project/manifests/base/frontend-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: todo-frontend-route
spec:
  parentRefs:
  - name: todo-app-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: todo-app-svc
      port: 666
